--- a/index.html
+++ b/index.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-</head>
-<body>
+    <title>Frontend Mentor | Results summary component</title>
+  </head>
+  <body>
+    <main class="card">
+      <section class="results">
+        <h1>Your Result</h1>
+        <div class="circle">
+          <h2>76</h2>
+          <p>of 100</p>
+        </div>
+        <h3>Great</h3>
+        <p>
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </section>
 
-  Your Result
-  76
-  of 100
+      <section class="summary">
+        <h1>Summary</h1>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+        <div class="contents">
+          <div class="row">
+            <div class="badge">
+              <img src="assets/images/icon-reaction.svg" alt="icon-reaction" />
+              <p>Reaction</p>
+            </div>
+            <p><b>80</b> / 100</p>
+          </div>
+          <div class="row">
+            <div class="badge">
+              <img src="assets/images/icon-memory.svg" alt="icon-memory" />
+              <p>Memory</p>
+            </div>
+            <p><b>92</b> / 100</p>
+          </div>
+          <div class="row">
+            <div class="badge">
+              <img src="assets/images/icon-verbal.svg" alt="icon-verbal" />
+              <p>Verbal</p>
+            </div>
+            <p><b>61</b> / 100</p>
+          </div>
+          <div class="row">
+            <div class="badge">
+              <img src="assets/images/icon-visual.svg" alt="icon-visual" />
+              <p>Visual</p>
+            </div>
+            <p><b>72</b> / 100</p>
+          </div>
+          <button>Continue</button>
+        </div>
+      </section>
+    </main>
 
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </footer>
-</body>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Paul</a>.
+    </footer>
+  </body>
 </html>
